@@ -5020,13 +5020,19 @@ decorateType (ast * tree, RESULT_TYPE resultType)
       return tree;
 
     case ':':
+      if ((compareType (LTYPE (tree), RTYPE (tree)) == 0) && (compareType (RTYPE (tree), LTYPE (tree)) == 0))
+        if (IS_PTR (LTYPE (tree)) && !IS_GENPTR (LTYPE (tree)))
+          DCL_TYPE (LTYPE(tree)) = GPOINTER;
+        if (IS_PTR (RTYPE (tree)) && !IS_GENPTR (RTYPE (tree)))
+          DCL_TYPE (RTYPE(tree)) = GPOINTER;
+
       if ((compareType (LTYPE (tree), RTYPE (tree)) == 0) &&
         (compareType (RTYPE (tree), LTYPE (tree)) == 0) &&
         !(IS_ARRAY(LTYPE (tree)) && IS_INTEGRAL(RTYPE (tree))) &&
         !(IS_ARRAY(RTYPE (tree)) && IS_INTEGRAL(LTYPE (tree))))
         {
           werrorfl (tree->filename, tree->lineno, E_TYPE_MISMATCH, "conditional operator", " ");
-          goto errorTreeReturn;
+          printFromToType (RTYPE (tree), LTYPE (tree));
         }
 
       TTYPE (tree) = computeType (LTYPE (tree), RTYPE (tree), resultType, tree->opval.op);
